added photos and notes and changed title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Webpage Title</title>
+    <title>Proposal Day - 3rd Jan</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
