added color and global styles and title

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Proposal Day - 3rd Jan</title>
+      <link rel="stylesheet" href="style.css">
+      <script src="script.js" defer></script>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proposal Day - 3rd Jan</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-</head>
+  <body>
+    <div class="ttlCont">
+      <h1 class="ttl">Proposal Day</h1>
+    </div>
 
-<body>
-
-</body>
-
+  </body>
 </html>
